# adventofcode2024

./: .gitignore  Cargo.toml  README.org  shell.nix
src/: eighth.rs  fifth.rs  first.rs  fourth.rs  main.rs  ninth.rs  second.rs  seventh.rs  sixth.rs  third.rs  utils.rs
