[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.10"
mockito = "0.31"
reqwest = { version = "0.11", features = ["blocking"] }
tempfile = "3.3"
tokio = { version = "1", features = ["full"] }